chore: 폰트 설정, 커스텀 컬러 설정, 텍스트 스타일 설정

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,27 @@
 
 @layer reset, base, tokens, recipes, utilities;
 
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  background-color: #f0f0f0;
+@layer reset {
+  body,
+  h1,
+  h2,
+  h3,
+  p {
+    margin: 0;
+  }
+}
+
+@layer base {
+  body {
+    line-height: 1.3;
+    font-family: 'Pretendard Variable', sans-serif;
+  }
+
+  button {
+    cursor: pointer;
+  }
+}
+
+@layer utilities {
+  /* 재사용할 유틸리티 */
 }
