feat: 드래그 방지 추가

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,7 @@
   p {
     margin: 0;
   }
+  
 }
 
 @layer base {
@@ -20,6 +21,14 @@
 
   button {
     cursor: pointer;
+  }
+
+  img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-select: none;
   }
 }
 
